refactor: 메소드 validateEmptyInput -> validateEmptyValue로 좀더 직관성있게 변경 및 입력 값 검증 방식 변경